--- a/configuration.prod.yaml
+++ b/configuration.prod.yaml
@@ -8,6 +8,12 @@ namedValues:
     properties:
       displayName: secret
       value: "PRODSecret"
+  - name: kv-secret-demo
+    properties:
+      displayName: kv-secret-demo
+      keyVault:
+        identityClientId: a2441164-f635-4235-8ff0-4eb287347276
+        secretIdentifier: https://keyvaultudemy204.vault.azure.net/secrets/kv-secret-demo-PROD/6e69c50c43124d3d93d83d2598711614
 loggers:
 diagnostics:
 backends:
