--- a/configuration.extractor.yaml
+++ b/configuration.extractor.yaml
@@ -2,37 +2,20 @@
 # More information about workspaces can be found here https://learn.microsoft.com/en-us/azure/api-management/workspaces-overview
 
  apiNames:
-  - apiName1
-  - apiName2
+  - swagger-petstore-openapi-3-0
 
  backendNames:
-  - backendName1
-  - backendName2
 
  diagnosticNames:
- - diagnosticName1
- - diagnosticName2
 
  loggerNames:
-  - loggerName1
-  - loggerName2
 
  namedValueNames:
-  - namedValueName1
-  - namedValueName2
 
  productNames:
-  - productName1
-  - productName2
 
  subscriptionNames:
- - subscriptionName1
- - subscriptionName2
 
  tagNames:
-  - tagName1
-  - tagName2
   
  policyFragmentNames:
-  - policyFragment1
-  - policyFragment2
